<resources>
    <string name="app_name">MAIBank</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_email">Email</string>
    <string name="reg_phone">Phone</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_cnp">CNP</string>
    <string name="reg_address">Address</string>
    <string name="contact">Contact</string>
    <string name="reg_registration">Registration</string>
    <string name="signUp">Sign Up</string>
    <string name="progressDialog_authentificate">Authenticating...</string>
    <string name="progressDialog_register">Register...</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="email_addresses">Email Addresses</string>
    <string name = "edit_info">Edit Info</string>
    <string name="logout">Logout</string>
    <string name="set">Set</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="btn_sendMoney">Send Money</string>
    <string name="btn_payBill">Pay a bill</string>
    <string name="btn_transactionHistory">Transaction History</string>
    <string name="sold">Sold</string>
    <string name="customerNumber">Customer Number</string>
    <string name="btn_pay">Pay</string>
    <string name="transfer">transfer</string>
    <string name="Yes">Yes</string>
    <string name="select_account">Select Account</string>
    <string name="download">Download</string>
    <string name="transactionhistory">Transaction History</string>
    <string name="myAccount">My Account</string>
    <string name="destinationaccount">Destination Account</string>
    <string name="amount">Amount</string>
    <string name="transactiondate">Transaction Date</string>
    <string name="create_new_account">Create new account</string>
    <string name="update_button">Save Information</string>
    <string name="maiBank_support">MAIBank support</string>
    <string name="send_email">Send Email</string>
    <string name="email">email</string>
</resources>