<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/edit_info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInfoPageTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Update Profile"
            android:textColor="@color/orange"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/infoEditTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_first_name"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/infoEditTextLastName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_last_name"
            android:singleLine="true"
            android:tag="regEditText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/infoEditTextCNP"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_cnp"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/infoEditTextAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_address"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/infoEditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_phone"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/infoEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_email"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/orange"
            android:hint="@string/update_button"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>