<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/regLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <TextView
            android:id="@+id/regTextViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:minHeight="48dp"
            android:text="@string/reg_registration"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="24sp" >
        </TextView>

        <Button
            android:id="@+id/contactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/regTextViewRegistration"
            android:layout_alignParentRight="true"
            android:text="@string/contact"
            android:background="@drawable/round_button_default"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regTextViewRegistration"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/regEditTextFName"
                android:tag="regEditTextFName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/reg_first_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:textSize="16sp" >
            </EditText>

            <EditText
                android:id="@+id/regEditTextLName"
                android:tag="regEditTextLName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/reg_last_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:imeOptions="actionDone"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/regEditTextCnp"
                android:tag="regEditTextCnp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/reg_cnp"
                android:layout_margin="10dp"
                android:inputType="none"
                android:singleLine="true"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/regEditTextAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:hint="@string/reg_address"
                android:singleLine="true"
                android:tag="regEditTextAddress"
                android:textSize="16sp"></EditText>

            <EditText
                android:id="@+id/regEditTextPhone"
                android:tag="regEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/reg_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:textSize="16sp" >
            </EditText>

            <EditText
                android:id="@+id/regEditTextEmail"
                android:tag="regEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:textSize="16sp" >
            </EditText>

            <EditText
                android:id="@+id/regEditTextPassword"
                android:tag="regEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/regEditTextConfirmPassword"
                android:tag="regEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/regSpinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:visibility="invisible" >
            </Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/regButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:background="@drawable/round_button_default"/>


    </RelativeLayout>
</ScrollView>
