<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoTextViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_first_name"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoTextViewSecondName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_last_name"
            android:singleLine="true"
            android:tag="regEditText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoTextViewCNP"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_cnp"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoTextViewAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_address"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoTextViewPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_phone"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoTextViewEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:hint="@string/reg_email"
            android:singleLine="true"
            android:tag="regEditTextFName"
            android:textSize="20sp" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/orange"
            android:hint="@string/edit_info"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>